# argument-mining-rest-api

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
demo/: app.py
eda/: bcause.ipynb  clean_corpus.ipynb  cofe.ipynb  dataset_statistics.ipynb  json_to_markdown.ipynb  pilots_transformation.ipynb  simonsays_transformation.ipynb  statements-dataset.ipynb  swedish-parliament.ipynb  taejae_transformation.ipynb  tokenization.ipynb  touche23-valueeval.ipynb
nginx/: default.conf
orbis_am_tool/: entrypoint.sh  manage.py
orbis_am_tool/argmining/: admin.py  apps.py  models.py  urls.py  views.py
orbis_am_tool/argmining/migrations/: 0001_initial.py  0002_argumentativecomponent_has_manual_annotation_and_more.py
orbis_am_tool/argmining/rest/: serializers.py  urls.py  views.py
orbis_am_tool/debate/: admin.py  apps.py  models.py
orbis_am_tool/debate/migrations/: 0001_initial.py  0002_statement_has_manual_annotation_and_more.py
orbis_am_tool/debate/rest/: serializers.py  urls.py  views.py
orbis_am_tool/debate/templates/debate/admin/: debate_change_form.html
orbis_am_tool/orbis_am_tool/: asgi.py  settings.py  urls.py  wsgi.py
orbis_am_tool/orbis_am_tool/settings/: __init__.py  prod.py.example
orbis_am_tool/static/: .keep
orbis_am_tool/utils/: django.py  pipelines.py
systemd/: orbis-am-tool.service
